[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-units"
version = "0.1.0"
description = "An MCP server for cooking unit conversions"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["mcp", "cooking", "units", "conversion"]
authors = [
    { name = "Diamantis Sellis", email = "sellisd@gmail.com" }
]
dependencies = [
    "jsonschema>=4.0.0",
    "pytest>=7.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
mcp-units = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
